# a9x-webstatistics

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
src/a9x_webstatistics/: __init__.py  gencockpit.py  gencockpitV0001.py  genqualityV0001.py  main.py  migratev0001.py  parseRecJsonV0001.py  sumDayV0001.py  sumNavDayV0001.py  summarizemonth.py  summarizemonthV0001.py  updateStatisticsV0001.py  updatestatistics.py
src/a9x_webstatistics/cleanupV0001/: __init__.py  cleanupQuality.py
src/a9x_webstatistics/gencockpitV0001/: __init__.py  cockpitlanguages.py
src/a9x_webstatistics/gencockpitsubV0001/: __init__.py  cockpitlanguages.py  dailyHits.py  dailyquality.py  dailytopcountries.py  dailytopdomains.py  dailytopurl.py  externalfriends.py  genheader.py  makenodeslinks.py  monthlyHits.py  monthlytopcountries.py  monthlytopdomains.py  monthlytopurl.py  navChord.py  nav_chord_longterm.py  navchart.py  navchartsankey.py  navtangledtree.py  navtangledtree2.py  performance.py  validip.py
src/a9x_webstatistics/genqualitysubV0001/: __init__.py  quality500.py
src/a9x_webstatistics/migV0001/: __init__.py  migrateV0001sub0001.py
src/a9x_webstatistics/migrateV0001/: migrateV0001sub0001.py
src/a9x_webstatistics/sumV0001/: __init__.py  (+3 more)
tests/: __init__.py  test_gencockpit010.py  test_main000.py  test_main001.py  test_main010.py  test_main030.py  test_main2022_000.py  test_main2023_00.py  test_main2024_00.py  test_main2025_00.py  test_main2026_01.py  test_module1.py  test_z090_gencockpit010.py
