[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "a9x-webstatistics"
requires-python = ">= 3.9"
description = "web statistics and analytics based on webserver access log files"
dynamic = ["version"]
